assets/css/style.css
@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
}

.fill {
  height: 30vh;
}

.page-footer {
  background-color: #4e5d6c;
}

#music {
  display: block;
}

#table {
  margin: 0 auto;
}

.table-dark td {
  padding-left: 6px;
  padding-right: 6px;
  font-size: 0.8em;
}

button.bar {
  padding: 0;
  transition: all 0.2s ease-in-out;
}

a.bar {
  padding: 1em;
}

.bar {
  width: 100%;
  height: 3.5em;
  background-color: #2b3e50;
  font-size: 0.7em;
}

.bar:hover:not(.selected) {
  background-color: #4e5d6c;
}

.bar.selected:hover {
  background-color: rgba(29, 161, 242, 0.8);
}

#form-contact {
  margin: 0 2vw;
}

.display-3,
.display-4 {
  font-size: 2.5rem;
}

.disabled {
  opacity: 1 !important;
  cursor: default;
}
.disabled.selected:not(.playing) {
  background-color: rgba(29, 161, 242, 0.2) !important;
}
.disabled:not(.selected),
.disabled:not(.selected):hover {
  background-color: #2b3e50 !important;
}

.message-style {
  color: #ebebeb;
  padding: 2em;
  margin-bottom: 2em;
  background-color: #4e5d6c;
  font-weight: 700;
}

.social a i {
  color: #fff;
  width: 2em;
  height: 2em;
  border-radius: 50%;
  font-size: 1em;
  line-height: 2em;
  text-align: center;
  margin-top: 5px;
  background: #2b3e50;
  transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  -webkit-transition: all 0.35s ease-in-out;
  -o-transition: all 0.35s ease-in-out;
}

.social a i.fa-twitter:hover {
  background: #1da1f2;
}

.hr {
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.social a i.fa-facebook-f:hover {
  background: #3b5998;
}

.social a i.fa-linkedin:hover {
  background: #4875b4;
}

.social a i.fa-instagram:hover {
  background: #e95950;
}

.list-unstyled li {
  margin-bottom: 1rem;
}

a:hover {
  text-decoration: none;
}

.jumbotron {
  padding: 4rem 2rem;
}

.selected {
  background-color: rgba(29, 161, 242, 0.2);
}

.playing {
  /* background-color: rgba(29, 161, 242, 0.6); */
  background-color: rgba(29, 161, 242, 0.6);
  font-weight: bolder;
  height: 100%;
  font-size: 0.8em !important;
  text-shadow: 2px 2px 2px rgba(29, 161, 242, 0.8);
}

.unselected {
  background-color: #fff;
}
/* .my-grid div{
align-self: auto;
} */
button#btn-randomise:active,
button#play-minuetto:active,
button#pause-button:active,
button#pause-button:focus,
button#playminuetto:focus,
button#btn-randomise:focus {
  outline: none;
  box-shadow: none;
  background-color: #df691a;
}

button#pause-button:hover,
button#playminuetto:hover,
button#btn-randomise:hover {
  background-color: #bd5916;
}

button.btn:active,
button.btn:focus {
  outline: none;
  box-shadow: none;
}

@media (min-width: 768px) {
  .social a {
    display: block;
    line-height: 2em;
  }

  .table-dark td {
    padding-left: 12px;
    padding-right: 12px;
    font-size: 1em;
    width: 200px;
  }

  .bar {
    font-size: 1em;
  }

  .display-3 {
    font-size: 4.5rem;
  }

  .display-4 {
    font-size: 4rem;
  }

  .playing {
    font-size: 1.5em !important;
  }
}

@media (min-width: 1024px) {
  .table-dark td {
    width: 500px;
  }
}

